[package]
name = "scry-host-tests"
description = "Native wasmtime host harness for the scry analyzer Wasm component (FEAT-001 AC#3)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# This crate is intentionally a near-empty library — all the real
# logic lives in `tests/soundness.rs` so it runs under `cargo test`
# without needing any runtime consumer. The lib stub exists so the
# crate has a build artifact and clippy has something concrete to
# lint on the library-target path.
[lib]
path = "src/lib.rs"

[dependencies]
# Host-only deps. None of these are referenced from the Wasm-component
# crates (wasm-lattice, scry-analyzer); cargo-bazel's @scry_crates
# repository resolves them for native triples only, so they never get
# pulled into the wasm32-wasip2 build of //:scry.
#
# Listed under [dependencies] (not [dev-dependencies]) so the public
# library target compiles against the same dependency surface that
# the integration tests see — clippy on the lib path picks up the
# same crates, and a future host-side helper module can be moved out
# of the test file without re-juggling the dep tables.
anyhow = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wat = { workspace = true }

# FEAT-008: contract test (tests/contract.rs) — native serde + jsonschema
# validation of a representative analysis-result against the published
# scry-invariants v1 JSON schema. Pure native, no wasmtime/component.
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }

# FEAT-002: provenance round-trip + projection test (tests/provenance.rs)
# exercises the pure meld<->scry boundary crate natively — the same
# source the wasm32-wasip2 analyzer links — so the encode/decode/project
# contract is falsifiable on the cargo path even while the live
# component round-trip stays blocked by the wac/wasmtime-45 limitation.
scry-provenance = { path = "../scry-provenance" }
# Used by the provenance test to build a real Wasm module with a
# `component-provenance` custom section and walk it back out with the
# exact API the analyzer's pre-pass uses (Parser + CustomSection).
wasmparser = { workspace = true }

# FEAT-009: native falsification of the shipped security-label lattice
# (the same scry-taint crate wasm-lattice's WIT `label-*` exports
# delegate to) in tests/taint.rs.
scry-taint = { path = "../scry-taint" }

# FEAT-010: native falsification of the shipped octagon relational
# domain (the same scry-octagon crate wasm-lattice's WIT `octagon-*`
# exports delegate to) in tests/octagon.rs.
scry-octagon = { path = "../scry-octagon" }
