[package]
name = "scry-sai-viz"
description = "Static-HTML visualization of a scry (scry-sai-core) AnalysisResult — functions, call graph, diagnostics, and per-program-point invariants (locals + operand stack)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["wasm", "static-analysis", "visualization", "verification"]
categories = ["development-tools", "visualization", "wasm"]

[lib]
name = "scry_viz"
path = "src/lib.rs"

[[bin]]
name = "scry-viz"
path = "src/main.rs"

[dependencies]
# The only dependency: the published analyzer library. scry-viz is a plain
# `std` host tool, so it can read the `AnalysisResult` plain-Rust types and
# render them — no WIT, no component, no wasmtime.
scry-sai-core = { path = "../scry-analyze-core", version = "1.16.0" }
# Assemble `.wat` inputs to module bytes (so the CLI accepts both .wat and
# .wasm); host-only, same dep the test harness uses.
wat = { workspace = true }
