[package]
name = "scry-sai-viz"
description = "Static-HTML visualization of a scry (scry-sai-core) AnalysisResult — functions, call graph, diagnostics, and per-program-point invariants (locals + operand stack)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["wasm", "static-analysis", "visualization", "verification"]
categories = ["development-tools", "visualization", "wasm"]

[lib]
name = "scry_viz"
path = "src/lib.rs"

[[bin]]
name = "scry-viz"
path = "src/main.rs"

[dependencies]
# The only dependency: the published analyzer library. scry-viz is a plain
# `std` host tool, so it can read the `AnalysisResult` plain-Rust types and
# render them — no WIT, no component, no wasmtime.
scry-sai-core = { path = "../scry-analyze-core", version = "3.0.0" }
# Assemble `.wat` inputs to module bytes (so the CLI accepts both .wat and
# .wasm); host-only, same dep the test harness uses.
wat = { workspace = true }
# FEAT-029: demangle the names in the wasm `name` section for display. Rust
# legacy (`_ZN…E`) + v0 (`_R…`) via rustc-demangle; Itanium C++ (`_Z…`) via
# cpp_demangle. Decoding only — the raw symbol is always kept (shown on hover).
rustc-demangle = "0.1"
cpp_demangle = "0.5"
